--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -28,10 +28,23 @@
 
 </head>
 <body class="container">
+
   {% include 'header.njk' %}
   <main>
     {{ content | safe }}
   </main>
   {% include 'footer.njk' %}
+
+  <script>
+    if (window.netlifyIdentity) {
+      window.netlifyIdentity.on("init", user => {
+        if (!user) {
+          window.netlifyIdentity.on("login", () => {
+            document.location.href = "/admin/";
+          });
+        }
+      });
+    }
+  </script>
 </body>
 </html>
