--- a/public/_includes/article.njk
+++ b/public/_includes/article.njk
@@ -40,6 +40,7 @@ layout: 'base.njk'
       </div>
       <!--Article paragraphs-->
       {{ content | safe }}
+      {{ .textbox.body | markdownify }}
   </div>
 
 </body>
