--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -1,4 +1,4 @@
-<footer class="footer container">
+<footer class="footer">
   <div class="footer-elements">
     <h3>© The Infosec Blog 2023</h2>
   </div>
