--- a/src/index.njk
+++ b/src/index.njk
@@ -76,6 +76,172 @@ layout: 'base.njk'
             </div>
           </div>
         {%- endfor -%}
+        
+        <div class="article-x">
+          <div class="article-x-flex">
+
+            <div class="article-1">
+              <img class="image" src="pictures/Cyber Secuirty.png" alt="">
+            </div>
+
+            <div class="article-description">
+
+              <span class="article-date">12-12-2004</span>
+              <a href="article.html">
+                <h2 class="article-title">farted Identity</h2>
+              </a>
+
+              <div class="article-author">
+                <div class="image-container">
+                  <img class="author-picture" src="./pictures/author-picture.jpeg" alt="">
+                </div>
+                <div class="text-container">
+                  <a href="author.html" target="_blank">
+                    <span class="author-name">
+                      Bogdan Grossu
+                    </span>
+                  </a>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+        <div class="article-x">
+          <div class="article-x-flex">
+
+            <div class="article-1">
+              <img class="image" src="pictures/Cyber Secuirty.png" alt="">
+            </div>
+
+            <div class="article-description">
+
+              <span class="article-date">12-12-2004</span>
+              <a href="article.html">
+                <h2 class="article-title">farted Identity</h2>
+              </a>
+
+              <div class="article-author">
+                <div class="image-container">
+                  <img class="author-picture" src="./pictures/author-picture.jpeg" alt="">
+                </div>
+                <div class="text-container">
+                  <a href="author.html" target="_blank">
+                    <span class="author-name">
+                      Bogdan Grossu
+                    </span>
+                  </a>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+        <div class="article-x">
+          <div class="article-x-flex">
+
+            <div class="article-1">
+              <img class="image" src="pictures/Cyber Secuirty.png" alt="">
+            </div>
+
+            <div class="article-description">
+
+              <span class="article-date">12-12-2004</span>
+              <a href="article.html">
+                <h2 class="article-title">farted Identity</h2>
+              </a>
+
+              <div class="article-author">
+                <div class="image-container">
+                  <img class="author-picture" src="./pictures/author-picture.jpeg" alt="">
+                </div>
+                <div class="text-container">
+                  <a href="author.html" target="_blank">
+                    <span class="author-name">
+                      Bogdan Grossu
+                    </span>
+                  </a>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+        <div class="article-x">
+          <div class="article-x-flex">
+
+            <div class="article-1">
+              <img class="image" src="/rog.jpg" alt="">
+            </div>
+
+            <div class="article-description">
+
+              <span class="article-date">12-12-2004</span>
+              <a href="article.html">
+                <h2 class="article-title">how to become the best person on the </h2>
+              </a>
+
+              <div class="article-author">
+                <div class="image-container">
+                  <img class="author-picture" src="./pictures/author-picture.jpeg" alt="">
+                </div>
+                <div class="text-container">
+                  <a href="author.html" target="_blank">
+                    <span class="author-name">
+                      Bogdan Grossu
+                    </span>
+                  </a>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+        <div class="article-x">
+          <div class="article-x-flex">
+
+            <div class="article-1">
+              <img class="image" src="pictures/Cyber Secuirty.png" alt="">
+            </div>
+
+            <div class="article-description">
+
+              <span class="article-date">12-12-2004</span>
+              <a href="article.html">
+                <h2 class="article-title">how to setup the ultimate SOC Analyst Lab?</h2>
+              </a>
+
+              <div class="article-author">
+
+                <div class="image-container">
+                  <img class="author-picture" src="./pictures/author-picture.jpeg" alt="">
+                </div>
+                <div class="text-container">
+                  <a href="author.html" target="_blank">
+                    <span class="author-name">
+                      Bogdan Grossu
+                    </span>
+                  </a>
+                </div>
+                
+              </div>
+
+            </div>
+          </div>
+        </div>
+        <div class="article-x">
+          <div class="article-1">asdf asdfsfsdfasdfasdfasdfasdfasdf</div>
+          <div class="article-1">asdf</div>
+          <div class="article-1">asdf</div>
+          <div class="article-1">asdf</div>
+        </div>
+        <div class="article-x">
+          <div class="article-1">asdf asdfsfsdfasdfasdfasdfasdfasdf</div>
+          <div class="article-1">asdf</div>
+          <div class="article-1">asdf</div>
+          <div class="article-1">asdf</div>
+        </div>
+
       </div>
     </div>
     <div class="load-more-container">
