--- a/src/styles/articles/analysis/article-1.css
+++ b/src/styles/articles/analysis/article-1.css
@@ -107,6 +107,13 @@ p {
   color: var(--text-caption);
 }
 
+ul, ol {
+  display: inline-block;
+  margin-right: auto;
+  margin-left: 2em;
+  padding-left: 2em;
+}
+
 .custom-bullet-list {
   display: inline-block;
   margin-right: auto;
