--- a/src/index.njk
+++ b/src/index.njk
@@ -42,7 +42,7 @@ layout: 'base.njk'
   </div>
 
   <!--Articles-->
-  <div class="articles-block container" id="articles-block">
+  <div class="articles-block" id="articles-block">
     <div class="articles-flex">
       <div class="articles-grid">
 
