--- a/src/index.njk
+++ b/src/index.njk
@@ -21,7 +21,7 @@ layout: 'base.njk'
   </div>
 
   <!--Menu-->
-  <div class="menu-bar container">
+  <div class="menu-bar">
     <div class="menu-headline">
       <div class="menu-components">
 
